# translatori_laba6

./: .gitignore  CMakeLists.txt  Makefile  README.md  parser.y  pow_zero.mini  pow_zero_negative.mini  scanner.l  test_correct.mini  test_errors.mini
examples/: run_tests.sh
examples/invalid/: division_by_zero.mini  extra_parenthesis.mini  extra_pow_arg.mini  float_number.mini  missing_operand.mini  missing_parenthesis.mini  missing_pow_arg.mini  pow_zero_negative2.mini  unknown_identifier.mini  unknown_symbol.mini
examples/valid/: arithmetic.mini  parentheses.mini  power.mini
files/: mini.l  mini.y
